development/projects/general/platform-dev1-cert/visualforce/force-app/main/default/objects/Football_Association__c/Football_Association__c.object-meta.xml
<CustomObject>
    <description>Football association affiliated to FIFA.</description>
    <label>Football Association</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Football Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>