development/projects/general/platform-dev1-cert/visualforce/force-app/main/default/objects/Football_Association__c/fields/Acronym__c.field-meta.xml
<CustomField>
    <fullName>Acronym__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acronym</label>
    <length>10</length>
    <type>Text</type>
</CustomField>