development/projects/general/platform-dev1-cert/visualforce/force-app/main/default/objects/Football_Association__c/fields/Continental_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Continental_Affiliation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Continental Affiliation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>