development/projects/general/platform-dev1-cert/visualforce/force-app/main/default/objects/Football_Association__c/fields/President__c.field-meta.xml
<CustomField>
    <fullName>President__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>President</label>
    <length>80</length>
    <type>Text</type>
</CustomField>