development/projects/general/platform-dev1-cert/visualforce/force-app/main/default/objects/Football_Association__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Website</label>
    <type>Url</type>
</CustomField>