development/projects/general/platform-dev1-cert/visualforce/force-app/main/default/objects/Football_Association__c/fields/Year_FIFA_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Year_FIFA_Affiliation__c</fullName>
    <label>Year FIFA Affiliation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>