development/projects/general/platform-dev1-cert/visualforce/force-app/main/default/objects/Football_Association__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Acronym__c</columns>
    <columns>NAME</columns>
    <columns>Year_Founded__c</columns>
    <columns>Year_FIFA_Affiliation__c</columns>
    <columns>Continental_Affiliation__c</columns>
    <columns>Year_Continental_Affiliation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>